<resources>
    <string name="app_name">TouchBubbles</string>
    <string name="menu">Menu</string>
    <string name="nsmbubbles_title">Number of Small Bubbles</string>
    <string name="nlgbubbles_title">Number of Large Bubbles</string>
    <string name="gravity_title">Gravity</string>
    <string name="updatetime_title">Update Time</string>
    <string name="dampening_title">Dampening</string>
    <string name="rigidity_title">Rigidity</string>
    <string name="compress_title">Compress</string>
    <string name="native_title">Native</string>
    <string name="settings_title">Settings</string>
    <string name="minsmall_title">Min Small Size</string>
    <string name="maxsmall_title">Small Size Range</string>
    <string name="minlarge_title">Min Large Size</string>
    <string name="maxlarge_title">Large Size Range</string>
    <string name="default_nbubbles">500</string>
    <string name="default_nlarge">1</string>
    <string name="default_smallmin">1</string>
    <string name="default_smallmax">3</string>
    <string name="default_largemin">7</string>
    <string name="default_largemax">0</string>
    <string name="default_gravity">10</string>
    <string name="default_updatetime">5</string>
    <string name="default_compress">true</string>
    <string name="default_dampening">0.9</string>
    <string name="default_rigidity">0.9</string>
    <string name="default_native">true</string>
    <string name="native_key">native</string>
    <string name="nsmall_key">nsmall</string>
    <string name="nlarge_key">nlarge</string>
    <string name="smallmin_key">smallmin</string>
    <string name="smallmax_key">smallmax</string>
    <string name="updatetime_key">updatetime</string>
    <string name="dampening_key">dampening</string>
    <string name="rigidity_key">rigidity</string>
    <string name="compress_key">compress</string>
    <string name="largemin_key">largemin</string>
    <string name="largemax_key">largemax</string>
    <string name="gravity_key">gravity</string>
</resources>
